⚙️ :: 육각형 아키텍처 적용